tests/for/statement_range.rz
for i in {} {} // error: missing range in 'for' loop